# raytracer

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  Doxyfile  README.md  app.info  loadExternal.cmake
cmake/: Export.cmake  External.cmake  loadExternal.cmake  raytracerConfig.cmake
docs/: Doxyfile  DoxygenLayout.xml  stylesheet.css
docs/html/: Absorption_8h_source.html  CollisionalFrequencyCalculators_8h_source.html  CollisionalFrequency_8h_source.html  Constants_8h_source.html  Element_8h_source.html  Face_8h_source.html  FreeFunctions_8h_source.html  GeometryFunctions_8h_source.html  GradientCalculators_8h_source.html  Gradient_8h_source.html  Intersection_8h_source.html  LaserPropagation_8h_source.html  LaserRay_8h_source.html  Laser_8h_source.html  Magnitudes_8h_source.html  MathFunctions_8h_source.html  Matrix2D_8h_source.html  MeshFunction_8h_source.html  Mesh_8h_source.html  Point_8h_source.html  Propagation_8h_source.html  Ray_8h_source.html  Refraction_8h_source.html  Termination_8h_source.html  Vector_8h_source.html  absorption_8h_source.html  annotated.html  classes.html  classraytracer_1_1AbsorptionController-members.html  classraytracer_1_1AbsorptionController.html  classraytracer_1_1AbsorptionModel-members.html  classraytracer_1_1AbsorptionModel.html  classraytracer_1_1AbsorptionModel__inherit__graph.map  classraytracer_1_1AbsorptionModel__inherit__graph.md5  classraytracer_1_1BremsstrahlungCoeff-members.html  classraytracer_1_1BremsstrahlungCoeff.html  classraytracer_1_1BremsstrahlungCoeff__inherit__graph.map  classraytracer_1_1BremsstrahlungCoeff__inherit__graph.md5  classraytracer_1_1ClassicCriticalDensity-members.html  classraytracer_1_1ClassicCriticalDensity.html  (+408 more)
docs/latex/: annotated.tex  classraytracer_1_1AbsorptionController.tex  classraytracer_1_1AbsorptionModel.tex  classraytracer_1_1AbsorptionModel__inherit__graph.md5  classraytracer_1_1CollisionalFrequency.tex  classraytracer_1_1CollisionalFrequency__inherit__graph.md5  classraytracer_1_1ConstantGradient.tex  classraytracer_1_1ConstantGradient__coll__graph.md5  classraytracer_1_1ConstantGradient__inherit__graph.md5  classraytracer_1_1Element.tex  classraytracer_1_1Face.tex  classraytracer_1_1Gaussian.tex  classraytracer_1_1Gradient.tex  classraytracer_1_1Gradient__inherit__graph.md5  classraytracer_1_1H1Gradient.tex  classraytracer_1_1H1Gradient__coll__graph.md5  classraytracer_1_1H1Gradient__inherit__graph.md5  classraytracer_1_1Laser.tex  classraytracer_1_1LaserRay.tex  classraytracer_1_1LaserRay__coll__graph.md5  classraytracer_1_1Mesh.tex  classraytracer_1_1MeshFunction.tex  classraytracer_1_1MeshFunction__inherit__graph.md5  classraytracer_1_1MfemMeshFunction.tex  classraytracer_1_1MfemMeshFunction__coll__graph.md5  classraytracer_1_1MfemMeshFunction__inherit__graph.md5  classraytracer_1_1Point.tex  classraytracer_1_1Ray.tex  (+94 more)
docs_src/: Doxyfile  header.html
documentation/: Doxyfile  DoxygenLayout.xml  stylesheet.css
examples/: CMakeLists.txt  traceLine.cpp
include/: raytracer.h
profile/: CMakeLists.txt  no_abs.cpp
samples/: CMakeLists.txt
samples/gradient_example/: .gitignore  gradient_example.cpp  householder.msgpack  plot_gradient.py
samples/mfem_gradient_example/: gradient_example.cpp
samples/minimal_example/: .gitignore  density.gf  mesh.mfem  minimal_example.cpp  plot_trajectory.py  trajectory.msgpack
src/: RayTracer.cpp  RayTracer.h
src/geometry/: CMakeLists.txt  Edge.cpp  Element.cpp  Face.cpp  FreeFunctions.cpp  Functions.cpp  GeometryFunctions.cpp  Intersection.cpp  MathFunctions.cpp  Matrix2D.cpp  Mesh.cpp  MeshFunction.cpp  Point.cpp  Quadrilateral.cpp  Ray.cpp  Triangle.cpp  Vector.cpp  geometry_primitives.cpp  intersection.cpp  mesh.cpp  mesh_function.cpp
src/geometry/include/: geometry.h
src/geometry/include/geometry/: Mesh.h  Point.h  Ray.h  Triangle.h
src/physics/: Absorption.cpp  CMakeLists.txt  CollisionalFrequency.cpp  Gradient.cpp  GradientCalculators.cpp  Laser.cpp  LaserPropagation.cpp  LaserRay.cpp  MathFunctions.cpp  Propagation.cpp  Refraction.cpp  Termination.cpp  absorption.cpp  collisional_frequency.cpp  gradient.cpp  laser.cpp  propagation.cpp  qr_decomposition.cpp  refraction.cpp  termination.cpp
src/utility/: AdjacencyList.cpp  CMakeLists.txt  FreeFunctions.cpp  JsonFormatter.cpp  QRDecomposition.cpp  numeric.cpp  qr_decomposition.cpp
src/utility/include/utility/: AdjacencyList.h  JsonFormatter.h
tests/: CMakeLists.txt
tests/geometry/: edgeTest.cpp  meshTest.cpp  pointTest.cpp  rayTest.cpp  triangleTest.cpp  vectorTest.cpp
tests/integration/: CMakeLists.txt  all_absorption.cpp  edge_cases.cpp  hous_gradient.cpp  initial.cpp  mfem_gradient.cpp  plot_initial.py  plot_ray.py  plot_rays.py  quadratic_density.cpp  reflection.cpp  single.cpp  tracing.cpp
tests/integration/data/: absorbed_energy.txt  initial_density.txt  initial_rays.json  ray.json  ray1.json  ray2.json  ray3.json  ray4.json  rays.json
tests/models/: CMakeLists.txt  models.cpp  models.json  plot_csv.py
tests/profile/: CMakeLists.txt  profile.cpp
tests/support/: matchers.cpp  matchers.h  mocks.cpp  mocks.h
tests/unit/: CMakeLists.txt  mocks.cpp  mocks.h
tests/unit/geometry/: edgeTest.cpp  elementTest.cpp  element_test.cpp  freeFunctionsTest.cpp  intersection_test.cpp  meshFunctionTest.cpp  meshTest.cpp  mesh_function_test.cpp  mesh_test.cpp  pointTest.cpp  point_test.cpp  quadrilateralTest.cpp  rayTest.cpp  vectorTest.cpp  vector_test.cpp
tests/unit/physics/: Absorption.cpp  CollisionalFrequency.cpp  CollisionalFrequencyCalculators.cpp  absorptionTest.cpp  absorption_test.cpp  functionsTest.cpp  gradientCalculatorsTest.cpp  gradientTest.cpp  gradient_test.cpp  laserPropagationTest.cpp  laserRayTest.cpp  laserTest.cpp  laser_test.cpp  models_test.cpp  propagationTest.cpp  propagation_test.cpp
tests/unit/utility/: adjacencyListTest.cpp  freeFunctionsTest.cpp  jsonFormatterTest.cpp  numeric_test.cpp  qrDecompositionTest.cpp  qr_decomposition_test.cpp
tests/utility/: adjacencyListTest.cpp  jsonFormatterTest.cpp
(+210 files in other folders)
