add_library(utility Utility.cpp)
target_include_directories(utility PUBLIC ../../include/raytracer/utility)
target_link_libraries(utility PUBLIC jsoncpp)
target_compile_options(utility PRIVATE $<$<CONFIG:DEBUG>:-Werror -Wall -Wextra>)
target_compile_options(utility PRIVATE $<$<CONFIG:RELEASE>:-O3>)
